fix: resolve logo flickering issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,9 +120,3 @@
 		@apply bg-background text-foreground;
 	}
 }
-
-.disable-transition *,
-::after,
-::before {
-	transition: none !important;
-}
